# backend-template

./: .gitignore  Cargo.toml  cargo-generate.toml
config/: default.toml
db/: init.sql
src/: blogs.rs  common.rs  config.rs  db.rs  demo.rs  error.rs  main.rs  routers.rs
src/blogs/: handler.rs  models.rs  repo.rs  service.rs
src/demo/: handler.rs  models.rs  repo.rs  service.rs
