[package]
name = "backend-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["trace", "tracing", "request-id"] }

sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
config = { version = "0.15.23", features = ["toml"] }
thiserror = "2.0.18"

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# swagger doc
utoipa = "5.5.0"
utoipa-axum = "0.2.0"
# vendored feature直接将swagger-ui打包进create
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
chrono = { version = "0.4.44", features = ["serde"] }
inventory = "0.3"